# onnx-mlir

./: small_mobile_net.cpp  small_resnet18-v1-7.cpp
src/: InitOMPasses.hpp
src/Accelerators/: SMaLLAccelerator.cpp
src/Accelerators/Dialect/SMaLL/: CMakeLists.txt  SMaLL.td
src/Accelerators/SMaLL/: CMakeLists.txt  SMaLLAccelerator.cpp  SMaLLAccelerator.hpp
src/Accelerators/SMaLL/Compiler/: CMakeLists.txt
src/Accelerators/SMaLL/Conversion/: CMakeLists.txt
src/Accelerators/SMaLL/Dialect/: CMakeLists.txt
src/Accelerators/SMaLL/Dialect/SMaLL/: SMaLL.td
src/Accelerators/SMaLL/Dialect/SMaLL/SMaLLOps/Elementwise/: Elementwise.cpp
src/Accelerators/SMaLL/Dialect/TiNY/: TiNY.td
src/Accelerators/SMaLL/Pass/: SMaLLPasses.hpp
src/Accelerators/SMaLL/Runtime/: OMRuntimeNNPA.c
src/Accelerators/SMaLL/Support/: LayoutHelper.cpp  LayoutHelper.hpp  OMNNPAOptions.cpp  OMNNPAOptions.hpp
src/Conversion/KrnlToLLVM/: KrnlCall.cpp
src/Conversion/ONNXToKrnl/Math/: Elementwise.cpp  MatMul.cpp
src/Conversion/ONNXToKrnl/NN/: Conv.cpp  Pooling.cpp
src/Pass/: Passes.hpp
src/Runtime/: OMTensor.inc
src/Transform/ONNX/: CMakeLists.txt  ONNXPrintSMaLLPass.cpp
